# Stratum

./: .gitignore  README.md  install.sh
config/examples/: config.example.json
crons/: README.md  seed-crons.sh
docs/: architecture.md  quickstart.md
modules/stratum-agent-monitor/: Cargo.toml  README.md
modules/stratum-agent-monitor/src/: main.rs
modules/stratum-boot-health/: Cargo.toml  README.md
modules/stratum-boot-health/src/: main.rs
modules/stratum-brain/: README.md  pyproject.toml
modules/stratum-brain/src/stratum_brain/: analyze.py  cli.py  integrations.py  reflect.py  sources.py
modules/stratum-continuity/: README.md  stratum-continuity.py
modules/stratum-lens/: README.md  pyproject.toml
modules/stratum-lens/stratum_lens/: chunker.py  cli.py  indexer.py  lock.py  store.py
modules/stratum-mind/: Cargo.toml  README.md
modules/stratum-mind/src/: main.rs
modules/stratum-mind/src/db/: mod.rs
modules/stratum-mind/src/goals/: mod.rs
modules/stratum-mind/src/lesson/: mod.rs
modules/stratum-mind/src/stash/: mod.rs
modules/stratum-mind/src/world/: mod.rs
modules/stratum-ops/: Cargo.toml  README.md
modules/stratum-ops/src/: main.rs
modules/stratum-reports/: README.md  stratum-reports.py
modules/stratum-watch/: Cargo.toml  README.md
modules/stratum-watch/src/: main.rs
patterns/multi-agent/: STATE.md
scripts/: init-mind-db.sql  init-ops-db.sql  init-watch-db.sql
templates/: AGENTS.md  HEARTBEAT.md  SOUL.md
