[package]
name = "stratum-agent-monitor"
version = "0.1.0"
edition = "2021"
description = "Stratum coding agent session monitor — nudges Claude Code at confirmation prompts"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
dirs = "5"

[[bin]]
name = "stratum-agent-monitor"
path = "src/main.rs"
