[package]
name = "stratum-mind"
version = "0.1.0"
edition = "2021"
description = "Stratum unified knowledge store — stash, lessons, world model, goals, memory governance"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dirs = "5"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "stratum-mind"
path = "src/main.rs"
