[package]
name = "stratum-ops"
version = "0.1.0"
edition = "2021"
description = "Stratum operations manager — privileged op queue, preflight checks, cron health"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dirs = "5"
anyhow = "1"

[[bin]]
name = "stratum-ops"
path = "src/main.rs"
