[package]
name = "stratum-watch"
version = "0.1.0"
edition = "2021"
description = "Stratum observability hub — cron health, context window, buffer, version drift, observer"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dirs = "5"
anyhow = "1"

[[bin]]
name = "stratum-watch"
path = "src/main.rs"
